# --BOSS-job-work

./: CHANGELOG.md  README.md  SKILL.md  boss_automation.py  boss_job_intelligence.py  boss_state.py  setup.sh  start-boss-job-work.bat  start-boss-job-work.ps1  stop-boss-job-work.ps1
boss_job_work_cli/: __init__.py  cli.py  client.py
interview/: start.sh
static/: dashboard.html
自动投简历-BOSS-job-work/: CONTRIBUTING.md  DISCLAIMER.md  LICENSE  SCRIPT.md  boss_app.py  boss_firefox.py  boss_replier.py  pyproject.toml  requirements.txt  stop-boss-job-work.bat
自动投简历-BOSS-job-work/boss_job_work_cli/: schema.json
自动投简历-BOSS-job-work/interview/: requirements.txt
